--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "gatsby-plugin-canonical-urls": "^2.1.20",
     "gatsby-plugin-google-analytics": "^2.1.36",
     "gatsby-plugin-manifest": "^2.2.42",
+    "gatsby-plugin-netlify": "^2.1.33",
+    "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-nprogress": "^2.1.19",
     "gatsby-plugin-offline": "^3.0.35",
     "gatsby-plugin-page-creator": "^2.1.40",
